syntax = "proto3";

option go_package="/pb";

service Users {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
    rpc GetListOfUsersByIds(GetListOfUsersByIdsRequest) returns (GetListOfUsersByIdsResponse);
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
    rpc GetPostsOfUser(GetPostsOfUserRequest) returns (GetPostsOfUserResponse);
    rpc CreateCommentForPost(CreateCommentForPostRequest) returns (CreateCommentForPostResponse);
    rpc DeleteCommentFromPost(DeleteCommentFromPostRequest) returns (DeleteCommentFromPostResponse);
    rpc GetPostWithComments(GetPostWithCommentsRequest) returns (GetPostWithCommentsResponse);
}

message User {
    int32 id = 1;
    string name = 2;
    string last_name = 3;
    string email = 4;
    int32 age = 5;
}

message Post {
    int32 id = 1;
    int32 user_id = 2;
    string title = 3;
    string text = 4;
    repeated Comment comments = 5; 
}

message PostTable {
    int32 id = 1;
    string user_name = 2;
    string user_last_name = 3;
    string title = 4;
    string text = 5;
}

message Comment {
    int32 id = 1;
    int32 post_id = 2;
    int32 user_id = 3;
    string text = 4;
}

message PostTableWithComment {
    int32 id = 1;
    string user_name = 2;
    string user_last_name = 3;
    string title = 4;
    string text = 5;
    int32 comment_id = 6;
    string comment_user_name = 7;
    string comment_user_last_name = 8;
    string comment = 9; 
}

message CreateUserRequest {
    string name = 1;
    string last_name = 2;
    string email = 3;
    int32 age = 4;
}

message CreateUserResponse {
    int32 id = 1;
}

message GetUserByIdRequest {
    int32 id = 1;
}

message GetUserByIdResponse {
    User user = 1;
}

message GetListOfUsersByIdsRequest {
    repeated int32 id = 1;
}

message GetListOfUsersByIdsResponse {
    repeated User users = 1;
}

message CreatePostRequest {
    int32 user_id = 1;
    string title = 2;
    string text = 3;
}

message CreatePostResponse {
    PostTable post_table = 1;
}

message GetPostsOfUserRequest {
    int32 user_id = 1;
}

message GetPostsOfUserResponse {
    repeated Post posts = 1;
}

message CreateCommentForPostRequest {
    int32 post_id = 1;
    int32 user_id = 2;
    string text = 3;
}

message CreateCommentForPostResponse {
    PostTableWithComment post_table_with_comment = 1;
}

message DeleteCommentFromPostRequest {
    int32 comment_id = 1;
}

message DeleteCommentFromPostResponse {
    string message = 1;
}

message GetPostWithCommentsRequest {
    int32 post_id = 1;
}

message GetPostWithCommentsResponse {
    Post post = 1;
}

